update audit to analyze

--- a/.azure-pipelines/client.yml
+++ b/.azure-pipelines/client.yml
@@ -45,7 +45,7 @@ jobs:
     displayName: 'Publish Artifacts'
     condition: succeededOrFailed()
 
-- job: 'Audit'
+- job: 'Analyze'
   dependsOn:
     - 'Build_Target_Packages'
   
