--- a/.azure-pipelines/client.yml
+++ b/.azure-pipelines/client.yml
@@ -24,6 +24,13 @@ jobs:
     displayName: 'Prep Environment'
  
   - task: PythonScript@0
+    displayName: 'Analyze dependencies'
+    enabled: true
+    inputs:
+      scriptPath: 'scripts/analyze_deps.py'
+      arguments: '--verbose --out "$(Build.ArtifactStagingDirectory)/dependencies.html"'
+
+  - task: PythonScript@0
     displayName: 'Generate Packages'
     inputs:
       scriptPath: 'scripts/devops_tasks/build_packages.py'
@@ -50,13 +57,6 @@ jobs:
     - 'Build_Target_Packages'
   
   steps:
-  - task: PythonScript@0
-    displayName: 'Analyze dependencies'
-    enabled: false
-    inputs:
-      scriptPath: 'scripts/analyze_deps.py'
-      arguments: '--verbose --out "$(Build.ArtifactStagingDirectory)/dependencies.html"'
-
   - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
     condition: and(always(), ne(variables['System.TeamProject'], 'public'))
     displayName: 'Component Detection'
