--- a/.azure-pipelines/client.yml
+++ b/.azure-pipelines/client.yml
@@ -50,7 +50,7 @@ jobs:
     - 'Build_Target_Packages'
   
   pool:
-    vmImage: 'ubuntu-16.04' 
+    vmImage: 'vs2017-win2016' 
     
   steps:
   
