added copy step

--- a/.azure-pipelines/client.yml
+++ b/.azure-pipelines/client.yml
@@ -57,7 +57,15 @@ jobs:
     enabled: true
     inputs:
       scriptPath: 'scripts/analyze_deps.py'
-      arguments: '--verbose --out "$(Build.ArtifactStagingDirectory)/dependencies.html"'
+      arguments: '--verbose --out "$(Build.SourcesDirectory)/dependencies.html"'
+
+  - task: CopyFiles@2
+    displayName: 'Move Dependencies Report to Build Artifacts'
+    inputs:
+      SourceFolder: '$(Build.SourcesDirectory)'
+      Contents: dependencies.html
+      TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    condition: always()
 
   - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
     # ComponentGovernance is currently unable to run on pull requests of public projects. Running on non-PR
